add endpoint for testing an email if spam or ham
