# core/ws_spam_model_updater/api.py
@@ -1,9 +1,11 @@
 import os
 from datetime import datetime, timedelta
 
+import joblib
 from flask import Blueprint, jsonify, request
 
 from core.email_spam_analyzer import EmailSpamAnalyzer
+from sklearn.feature_extraction.text import TfidfVectorizer
 
 urls_blueprint = Blueprint('api_urls', __name__)
 
@@ -15,7 +17,7 @@ def home2():
 def home():
     return 'Welcome to this web service\nThe aim is for you to refine an email that was classified as ham or spam.', 200
 
-@urls_blueprint.route('/spam-email-refine/api/v1.0/define-email', methods=['POST'])
+@urls_blueprint.route('/spam-email-refine/api/v1.0/define-email-classification', methods=['POST'])
 def refine_model_email():
     payload = request.get_json(force=True)
     if 'email' not in payload.keys():
@@ -64,3 +66,28 @@ def regenerate_model():
         email_spam_analyzer.save_model()
     
     return jsonify({'status':'ok'}), 200
+
+@urls_blueprint.route('/spam-email-refine/api/v1.0/my_email_is_spam_or_ham', methods=['POST'])
+def check_email():
+    payload = request.get_json(force=True)
+    if 'email' not in payload.keys():
+        result = {'status':'ko','message':'no email found in the payload.'}
+        return jsonify(result), 200
+
+    email_to_analyze = payload['email']
+    email = [email_to_analyze]
+
+    SVM = joblib.load('core/machine_learning/ml_model_export/email_spam_detector_model.joblib')
+    tf_vec = joblib.load('core/machine_learning/ml_model_export/tf_vectorizer.joblib')
+    email_transfromed = tf_vec.transform(email)
+    
+    result = SVM.predict(email_transfromed)
+
+    if str(result.item()) == "0":
+        return jsonify({'status':'ok','classification':'ham','email':email_to_analyze}), 200
+    elif str(result.item()) == "1":
+        return jsonify({'status':'ok','classification':'spam','email':email_to_analyze}), 200
+    else:
+        return jsonify({'status':'ko','classification':'this email can not be auto-classified yet.\nHint: you could set its classification for refining purposes by calling "define-email-classification"','email':email_to_analyze}), 200
+
+    
